html/css/lightbox.css
.lightbox a {
	color: #5A5A5A;
	font-weight: bold;
}

.lightbox {
	background-color:#CDCDCD;
	border:1px solid #000;
	bottom:5%;
	color:#000;
	left:20%;
	padding:16px;
	position:fixed;
	right:20%;
	top:5%;
	z-index:9001;
	overflow: auto;
}

.lightbox-bg {
	background-attachment:fixed;
	background-color:#333;
	height:100%;
	left:0;
	opacity:0.5;
	position:fixed;
	top:0;
	width:100%;
	z-index:9000;
}

.lightbox-footer {
	bottom:5%;
	clear:both;
	left:16px;
	position:absolute;
	right:16px;
	text-align:center;
}

.lightbox-title {
	font-size:42px;
	font-weight:700;
	text-align:center;
}

.lightbox-x {
	color:#000;
	float:right;
	z-index:90002;
}

.lightbox-x:hover {
	color:#000;
}

.lightbox textarea#sql-statement {
	width:95%;
	height:300px;
	margin-left: 0px;
	clear: both;
	background-color: #FFFFFF;
	color: #000000;
}

.lightbox div.section-body {
	background-color: #A0A0A0;
}

.lightbox div.section-title-block {
	border: 1px solid #000000;
	border-radius: 0px;
	background-color: #777777;
}

